# PolicyAgent

./: .env.example  .env.remote.example  .gitattributes  .gitignore  AGENTS.md  PolicyReport Agent.docx  README.md  dev-down.cmd  dev-up.cmd  docker-compose.remote-db.yml  docker-compose.server.yml  docker-compose.yml
api/: README.md  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: a1b2c3d4e5f6_add_session_knowledge_base_id.py  a4b5c6d7e8f9_contest_dual_sources.py  a8b9c0d1e2f3_add_policy_apply_deadline.py  b1c2d3e4f5a6_tenant_contest_sources_observability.py  b2c3d4e5f6a7_add_tenant_settings.py  b7c1d2e3f4a5_add_multitenancy_tables.py  b9c0d1e2f3a4_add_tenant_embed_config.py  c0d1e2f3a4b5_add_agent_memories.py  c2d3e4f5a6b7_add_tenant_contest_source_preset.py  c3d4e5f6a7b8_sessions_tenant_id_not_null.py  c4d5e6f7a8b9_add_tenant_is_personal.py  d1e2f3a4b5c6_add_intel_briefings.py  d2e3f4a5b6c7_add_tenant_contest_search_config.py  d4e5f6a7b8c9_files_tenant_id_not_null.py  d5e6f7a8b9c0_add_enterprise_profile.py  e2f3a4b5c6d7_add_tenant_feishu_config.py  e5f6a7b8c9d0_add_user_platform_admin.py  e6f7a8b9c0d1_add_public_policy_library.py  f3a4b5c6d7e8_add_source_crawl_states.py  f6a7b8c9d0e1_add_rag_tables.py  f7a8b9c0d1e2_add_policy_matches.py
api/app/: main.py
api/app/application/errors/: exceptions.py
api/app/application/services/: agent_memory_service.py  agent_service.py  auth_service.py  briefing_service.py  contest_service.py  enterprise_profile_service.py  feed_service.py  file_service.py  knowledge_service.py  membership_service.py  policy_ingest_service.py  policy_match_service.py  policy_service.py  profile_enrichment_service.py  qualification_service.py  report_service.py  (+2 more)
api/app/interfaces/: auth_dependencies.py  service_dependencies.py
api/core/: config.py
api/scripts/: record_rag_vectors.py  run_eval.py
api/tests/eval/: __init__.py  _support.py  metrics.py  test_eval_deadline.py  test_eval_gap.py  test_eval_matching.py  test_eval_rag.py
api/tests/integration/: conftest.py  test_policy_repo_stats.py  test_repository_tenant_isolation.py  test_tenant_settings_repo.py
(+350 files in other folders)
