[project]
name = "policy-manus-api"
version = "0.1.0"
description = "Enterprise policy consulting agent API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.0",
    "argon2-cffi>=23.1.0",
    "async-lru>=2.3.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "cos-python-sdk-v5>=1.9.41",
    "docker>=7.1.0",
    "fastapi>=0.135.2",
    "filelock>=3.25.2",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    # 中文分词：结构化匹配按 token 重合判命中，替代脆弱的原样子串
    "jieba>=0.42.1",
    "json-repair>=0.59.1",
    "markdownify>=1.2.2",
    "mcp>=1.27.0",
    "openai>=2.30.0",
    "pgvector>=0.3.6",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.10.0",
    "pymupdf>=1.24.0",
    "redis>=7.4.0",
    # 政策匹配简报 PDF 导出：纯 pip、无系统原生依赖，自带 STSong-Light CID 中文字体
    "reportlab>=4.2.0",
    "sqlalchemy[asyncio]>=2.0.48",
    # APScheduler 的传递依赖 tzlocal：钉在 <5.4 避免拉到刚发布(2026-06-17)的 5.4.3，
    # 该版本镜像/索引尚未普遍传播，会导致容器内 uv 解析失败。
    "tzlocal<5.4",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
